add org dept people table from storage

--- a/src/views/surveys/surveys.css
+++ b/src/views/surveys/surveys.css
@@ -2,3 +2,10 @@
   margin-top: 20px;
   text-align: center;
 }
+
+.surveysContainer {
+  margin-top: 50px;
+  margin-left: 550px;
+  text-align: center;
+  width: 700px;
+}
