layout react flow with d3

--- a/src/views/flows/flows.css
+++ b/src/views/flows/flows.css
@@ -8,7 +8,7 @@
   margin: 20px;
 }
 .flowsRenderContainer {
-  margin: 60px;
+  margin-right: 50px;
 }
 .otherOptionsContainer {
   margin-top: 20px;
